--- a/Style.css
+++ b/Style.css
@@ -44,6 +44,15 @@ header nav{
     width: 100%;
 }
 
+header{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: white;
+}
+
+
+
 footer{
     border-width:1px;
     display: flex;
