--- a/Style_mobile.css
+++ b/Style_mobile.css
@@ -1,39 +1,30 @@
 /* Les résolutions inférieures à 480px (SmartPhone)
-Les résolutions entre 480 et 768px (Tablettes)
-Les résolutions supérieures à 768px (Les écrans de PC) */
+Les résolutions entre 481 et 768px (Tablettes)
+Les résolutions supérieures à 769px (Les écrans de PC) */
+
 @media screen and (max-width: 480px) {
-    header{
+    html {
+        font-size: 0.8rem;
+        width: 480px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    header {
         position: sticky;
         top: 0;
         width: 100%;
         background-color: blue;
         font-size: 0.65rem;
     }
-
-    header nav{
+    header nav {
         display: none;
     }
-/*  */
-    header #header_main_section{
+    header #header_main_section {
         display: flex;
         justify-content: space-around;
     }
-
-    header #header_main_section section{
+    header #header_main_section section {
         width: 33%;
     }
-
-   header section #titre h1{
-       top: 0%;
-       margin: 0%;
-       text-align: center;
-        color: white;
-        border-width:1px;
-        border-style:solid;
-        border-color:blue;
-        font-size: 1.2rem;
-   }
-
     /* Dropdown Button */
     .dropbtn {
         background-color: #4CAF50;
@@ -41,25 +32,24 @@ Les résolutions supérieures à 768px (Les écrans de PC) */
         padding: 12px;
         border: none;
         font-size: 1.2rem;
-        height: 100% ;
+        height: 100%;
         cursor: pointer;
     }
-
     /* The container <div> - needed to position the dropdown content */
     .dropdown {
         position: relative;
         display: inline-block;
+        height: 100%;
     }
-
     /* Dropdown Content (Hidden by Default) */
     .dropdown-content {
         display: none;
         position: absolute;
         background-color: #f9f9f9;
         font-size: 1rem;
-        min-width: 480px;
+        /* min-width: 480px; */
+        min-height: 720px;
     }
-
     /* Links inside the dropdown */
     .dropdown-content a {
         color: black;
@@ -67,63 +57,75 @@ Les résolutions supérieures à 768px (Les écrans de PC) */
         text-decoration: none;
         display: block;
     }
-
     /* Change color of dropdown links on hover */
-    .dropdown-content a:hover {background-color: #f1f1f1}
-
+    .dropdown-content a:hover {
+        background-color: #f1f1f1
+    }
     /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
-        display: block;
+        display: flex;
+        flex-direction: column;
     }
-
     /* Change the background color of the dropdown button when the dropdown content is shown */
     .dropdown:hover .dropbtn {
         background-color: #3e8e41;
     }
-   
-    section #Cv{
+    header section #titre h1 {
+        top: 0;
+        margin: 0;
+        text-align: center;
+        color: white;
+        font-size: 1.2rem;
+    }
+    section #Cv {
         text-align: center;
         top: 0%;
+        color: white;
     }
-
-    .block{
+    main {
+        background-color: rgb(243, 242, 247);
+    }
+    .main_block {
         padding-top: 7%;
-        margin: 0;
     }
-
-    .list_comp{
-        display: flex;
+    main li {
+        list-style: none;
     }
-
-    #photo{
+    #photo {
         width: 75px;
     }
-
-    .img_comp{
+    .block {
+        margin: 0;
+        background-color: rgb(238, 237, 241);
+    }
+    .icon {
+        display: inline-block;
+        width: 24px;
+        stroke-width: 0;
+        stroke: currentColor;
+        fill: currentColor;
+    }
+    .list {
+        display: flex;
+        margin-top: 2%;
+    }
+    .list p {
+        margin: 2%;
+    }
+    .img {
         width: 50px;
-        height: auto;
     }
-
-    .img_contact{
-        width: 50px;
+    footer {
+        display: block;
     }
-
-    html{
-        font-size: 1.2rem;
-
-    }
-
-    footer a{
+    footer a {
         color: white;
         text-align: center;
     }
-    
-    footer #main_section_footer{
-        display: flex;
+    footer #main_section_footer {
         justify-content: space-around;
         color: white;
         background-color: blue;
-        
+        display: flex;
     }
-
 }
