--- a/Style_mobile.css
+++ b/Style_mobile.css
@@ -11,9 +11,11 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
     header {
         position: sticky;
         top: 0;
+        padding: 0;
         width: 100%;
-        background-color: blue;
-        font-size: 0.65rem;
+        height: 52px;
+        background-color: rgb(0, 0, 0);
+        font-size: 0.80rem;
     }
     header nav {
         display: none;
@@ -21,13 +23,14 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
     header #header_main_section {
         display: flex;
         justify-content: space-around;
+        height: 100%;
     }
     header #header_main_section section {
         width: 33%;
     }
     /* Dropdown Button */
     .dropbtn {
-        background-color: #4CAF50;
+        background-color: #ff0000;
         color: white;
         padding: 12px;
         border: none;
@@ -46,9 +49,8 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
         display: none;
         position: absolute;
         background-color: #f9f9f9;
-        font-size: 1rem;
-        /* min-width: 480px; */
-        min-height: 720px;
+        font-size: 1.5rem;
+        min-width: 480px;
     }
     /* Links inside the dropdown */
     .dropdown-content a {
@@ -70,8 +72,9 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
     .dropdown:hover .dropbtn {
         background-color: #3e8e41;
     }
+    /* Header */
     header section #titre h1 {
-        top: 0;
+        padding-top: 5%;
         margin: 0;
         text-align: center;
         color: white;
@@ -82,21 +85,38 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
         top: 0%;
         color: white;
     }
+    section #Cv p {
+        margin: auto;
+    }
+    section #Cv #CV {
+        padding-top: 5%;
+    }
+    /* Body */
     main {
         background-color: rgb(243, 242, 247);
     }
     .main_block {
-        padding-top: 7%;
+        padding-top: 15%;
     }
     main li {
         list-style: none;
     }
     #photo {
-        width: 75px;
+        width: 90px;
     }
     .block {
         margin: 0;
-        background-color: rgb(238, 237, 241);
+        padding: 0;
+        background-color: rgb(219, 219, 219);
+        border-radius: 10px;
+    }
+    h2 {
+        background-color: black;
+        color: white;
+        margin: 0;
+        padding: 2%;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
     }
     .icon {
         display: inline-block;
@@ -111,14 +131,31 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
     }
     .list p {
         margin: 2%;
+        display: flex;
+        align-items: center;
     }
     .img {
         width: 50px;
         margin-right: 2%;
     }
+    /* Formation */
     .form_list {
         margin-bottom: 2%;
+        display: flex;
     }
+    .form_content {
+        width: 80%;
+        margin-left: 2%;
+    }
+    .form_date {
+        width: 15%;
+        text-align: center;
+    }
+    /* Experience */
+    .exp_content {
+        width: 80%;
+    }
+    /* Footer */
     footer {
         display: block;
     }
@@ -129,7 +166,10 @@ Les résolutions supérieures à 769px (Les écrans de PC) */
     footer #main_section_footer {
         justify-content: space-around;
         color: white;
-        background-color: blue;
+        background-color: black;
         display: flex;
+    }
+    .section_footer .img {
+        padding-top: 5%;
     }
 }
